--- a/src/Pages/Login/login.module.scss
+++ b/src/Pages/Login/login.module.scss
@@ -3,15 +3,22 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-
+    .error{
+      color: rgb(161, 30, 102);
+      position: absolute;
+      left: 50%;
+    transform: translateX(-50%);
+    }
+    
     .login {
-      background-color: rgb(207, 186, 228);
+      background-color: rgba(21, 14, 28, 0.6);
       padding: 2rem;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       text-align: center; 
       max-width: 350px; 
       width: 100%; 
       border-radius: 20px;
+      z-index: 2;
 
       .logo{
         width: 200px;
@@ -39,5 +46,21 @@
       }
     }
   }
-
+  .bgImage{
+    background-image: url(./unit.jpg);
+    position: absolute;
+    top: 0;
+    bottom: 10%;
+    width: 100%;
+    /* Add the blur effect */
+    filter: blur(6px);
+    -webkit-filter: blur(8px);
   
+    /* Full height */
+    height: 100%;
+  
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
