--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -12,4 +12,15 @@
   font-size: 15px;
   font-weight: 600;
   color: RGB(138, 43, 226);
+}
+
+@media (max-width: 768px) {
+  .footer {
+    flex-direction: column;
+    text-align: center;
+  }
+  .links {
+    margin: 10px 0;
+    font-size: 14px;
+  }
 }/*# sourceMappingURL=footer.module.css.map */
