--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,14 @@
 
+body>div:nth-child(2)  {
+    /* display: none; */
+}
 body>div:nth-child(3)  {
     /* display: none; */
 }
 body>div:nth-child(4)  {
     /* display: none; */
+}
+
+body>div[style]{
+    display: none;
 }
